--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Backgammon Six One</title>
+    <!-- Primary Meta Tags -->
+    <title>Backgammon Six One - Online Game</title>
+    <meta name="title" content="Backgammon Six One - Online Game" />
+    <meta name="description" content="Play Backgammon 6-1 online with friends or against the bot. Smooth animations, intuitive controls, and authentic gameplay — experience the true spirit of backgammon!" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://backgammon-six-one.vercel.app/" />
+    <meta property="og:title" content="Backgammon Six One - Online Game" />
+    <meta property="og:description" content="Play Backgammon 6-1 online with friends or against the bot. Smooth animations, intuitive controls, and authentic gameplay — experience the true spirit of backgammon!" />
+    <meta property="og:image" content="/logo.png" />
+
+    <!-- X (Twitter) -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://backgammon-six-one.vercel.app/" />
+    <meta property="twitter:title" content="Backgammon Six One - Online Game" />
+    <meta property="twitter:description" content="Play Backgammon 6-1 online with friends or against the bot. Smooth animations, intuitive controls, and authentic gameplay — experience the true spirit of backgammon!" />
+    <meta property="twitter:image" content="/logo.png" />
+
   </head>
   <body>
     <div id="root"></div>
